--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -58,20 +58,20 @@
             <div class="front">
                 <h2>Frontend Development</h2>
                 <ul class="linguagem1">
-                    <li><img class="verificado" src="./img/verificado" alt="">HTML</li>
-                    <li><img class="verificado" src="./img/verificado" alt="">CSS</li>
-                    <li><img class="verificado" src="./img/verificado" alt="">JavaScript</li>
-                    <li><img class="verificado" src="./img/verificado" alt="">Java</li>
-                    <li><img class="verificado" src="./img/verificado" alt="">PHP</li>
-                    <li><img class="verificado" src="./img/verificado" alt="">Bootstrap</li>
+                    <li><img class="verificado" src="./img/verificado.png" alt="">HTML</li>
+                    <li><img class="verificado" src="./img/verificado.png" alt="">CSS</li>
+                    <li><img class="verificado" src="./img/verificado.png" alt="">JavaScript</li>
+                    <li><img class="verificado" src="./img/verificado.png" alt="">Java</li>
+                    <li><img class="verificado" src="./img/verificado.png" alt="">PHP</li>
+                    <li><img class="verificado" src="./img/verificado.png" alt="">Bootstrap</li>
                 </ul>
             </div>
             <div class="back">
                 <h2>Backend Development</h2>
                 <ul class="linguagem2">
-                    <li> <img class="verificado" src="./img/verificado" alt="">Node JS</li>
-                    <li> <img class="verificado" src="./img/verificado" alt="">MySQL</li>
-                    <li><img class="verificado" src="./img/verificado" alt="">Python</li>
+                    <li> <img class="verificado" src="./img/verificado.png" alt="">Node JS</li>
+                    <li> <img class="verificado" src="./img/verificado.png" alt="">MySQL</li>
+                    <li><img class="verificado" src="./img/verificado.png" alt="">Python</li>
                 </ul>
             </div>
         </div>
@@ -120,8 +120,8 @@
         <p>Get in</p>
         <h1>Contact <span>Me</span></h1>
         <ul class="menu_contato">
-            <li><img src="./img/email.png" alt="">eric-pimentel@hotmail.com</li>
-            <li> <a href="https://www.linkedin.com/in/eric-pimentel-2540b2203/" target="_blank"><img src="./img/linkedin.png" alt="">Linkedin</a></li>
+            <li><img class="email" src="./img/email.png" alt="">eric-pimentel@hotmail.com</li>
+            <li> <a href="https://www.linkedin.com/in/eric-pimentel-2540b2203/" target="_blank"><img class="linkedin" src="./img/linkedin.png" alt="">Linkedin</a></li>
         </ul>
     </div>
     <footer>
@@ -132,7 +132,7 @@
             <li><a href="https://www.instagram.com/_pimen.tel/" target="_blank"><img src="./img/insta.webp"
                         alt="">Instagram</a></li>
         </ul>
-        <p>&copy; 2024 Eric Pimentel. All Rights Reserved.</p>
+        <p>&copy;2024 Eric Pimentel. All Rights Reserved.</p>
     </footer>
 
     <script src="./script.js"></script>
